fixed shifting icon for small screens

--- a/src/app/work/work.component.scss
+++ b/src/app/work/work.component.scss
@@ -41,7 +41,8 @@
             display: flex;
             vertical-align: middle;
             color: $dark;
-            text-decoration: none;        
+            text-decoration: none; 
+            font-size: 16px;       
         }
 
         mat-icon { 
